Bug 1377228 - Don't encode empty strings to avoid crash. r=rkent

--HG--
extra : amend_source : fab69f4a3412d0f97e3dce0c584bc088f5639b94